--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Maket</string>
+    <string name="home">Home</string>
+    <string name="classes">Classes</string>
+    <string name="tasks">Tasks</string>
+    <string name="favorite">Favorite</string>
 </resources>
